--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,13 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "tailwind.config.cjs", "postcss.config.cjs", "src/custom.d.ts", "vite.config.ts", ".eslintrc.cjs"],
+  "include": [
+    "src",
+    "tailwind.config.cjs",
+    "postcss.config.cjs",
+    "src/custom.d.ts",
+    "vite.config.ts",
+    ".eslintrc.cjs"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
