--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview",
     "lint": "eslint --ext .ts --ext .tsx .",
     "lint:fix": "eslint --fix --ext .ts --ext .tsx .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "postinstall": "husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable"
   },
   "dependencies": {
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "lint-staged": "^15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.5"
@@ -32,6 +36,8 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "husky": "^8.0.3",
+    "pinst": "^3.0.0",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.5",
