--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "jotai": "^2.5.1",
     "lint-staged": "^15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
