--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postpack": "pinst --enable"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "jotai": "^2.5.1",
     "lint-staged": "^15.1.0",
