--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "axios": "^1.6.2",
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "i18next": "^23.7.6",
     "jotai": "^2.5.1",
     "lint-staged": "^15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-router-dom": "^6.20.0",
     "sass": "^1.69.5"
   },
