--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "lint": "eslint --ext .ts --ext .tsx .",
     "lint:fix": "eslint --fix --ext .ts --ext .tsx .",
     "format": "prettier --write .",
-    "postinstall": "husky install",
-    "prepack": "pinst --disable",
-    "postpack": "pinst --enable"
+    "postinstall": "husky install"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -48,5 +46,11 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^4.9.3",
     "vite": "^5.0.0"
+  },
+  "lint-staged": {
+    "*.{js,css,ts,tsx,jsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
